--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ android {
     defaultConfig {
         applicationId "com.sriharilabs.harisharan.quiz"
         minSdkVersion 17
-        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,4 +30,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-ads:11.8.0'
+    compile 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
